--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,62 @@
   --color-background-section: #00b494;
   --color-button: #4aedc9;
   --color-texte: #fff;
+  --color-texte2: #4aedc9;
+  --size-title: 2rem;
+  --size-paragraphe: 1.015rem;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
   background-color: var(--color-background);
+  font-family: "Montserrat", sans-serif;
+  font-size: var(--size-paragraphe);
+}
+
+.header {
+  background-color: var(--color-background-section);
+  padding: 1em;
+}
+
+.nav__header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.title__header {
+  font-size: var(--size-paragraphe);
+  font-size: 1.5rem;
+  font-weight: 900;
+  color: var(--color-texte);
+}
+
+.title__header > span {
+  color: var(--color-texte2);
+}
+
+.nav__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: var(--color-texte);
+  padding: 0 1.2em;
+  font-weight: 600;
+}
+
+.active {
+  color: var(--color-button);
+}
+
+.nav__link:hover {
+  color: var(--color-button);
 }
