Ajout de la classe nav__close dans le petit ecran

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ body {
 
 .nav__close,
 .nav__toggle {
-  display: none;
+  display: non;
 }
 
 /* ======  Menu de Navigation sur mobile ====== */
@@ -81,6 +81,12 @@ body {
   .nav__close,
   .nav__toggle {
     display: initial;
+  }
+
+  .nav__close {
+    position: absolute;
+    top: 10px;
+    right: 95px;
   }
 
   .nav__list {
