--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,8 @@ span {
   padding: 0 0.8em;
 }
 
-.social__hero a:hover {
+.social__hero a:hover,
+.social__contact a:hover {
   color: var(--color-button);
 }
 
@@ -391,7 +392,6 @@ button:hover {
   justify-content: center;
   width: 72%;
   margin: 0 auto;
-  row-gap: 20px;
 }
 
 .soft__skills,
@@ -404,9 +404,11 @@ button:hover {
 }
 
 .soft__skills h2,
-.hard__skills h2 {
+.hard__skills h2,
+.formulaire > h2 {
   text-align: center;
   padding-bottom: 1em;
+  color: var(--color-texte);
 }
 
 .soft__skill__1,
@@ -488,4 +490,70 @@ button:hover {
     flex-direction: column;
     width: 90%;
   }
+}
+
+/* ========= SECTION CONTACT ======== */
+.contact__section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 72%;
+  margin: 0 auto;
+}
+
+.formulaire {
+  padding: 1em;
+  margin: 2em;
+}
+
+.social__contact {
+  width: 40%;
+  margin: 0 auto;
+}
+
+.social__contact a {
+  color: var(--color-texte);
+  text-decoration: none;
+  font-size: 1.3rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  color: var(--color-texte);
+  font-size: 1.2rem;
+  background-color: var(--color-background-section2);
+  padding: 1em;
+  margin: 1em;
+}
+
+form > label {
+  padding: 0.6em 0;
+}
+
+form > input,
+form > textarea {
+  background-color: var(--color-background-section2);
+  border: none;
+  border-bottom: 1px solid var(--color-button);
+  color: var(--color-texte);
+}
+
+form > input {
+  padding: 0.8em;
+}
+
+form > input:focus,
+form > textarea:focus {
+  outline: none;
+}
+
+form > input::placeholder,
+form > textarea::placeholder {
+  font-size: 1rem;
+}
+
+button[type="submit"] {
+  color: var(--color-texte);
+  font-size: var(--size-paragraphe);
 }
