--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -603,7 +603,8 @@ button[type="submit"] {
   }
 
   .social__contact {
-    width: 30%;
+    width: 50%;
+    padding-bottom: 1em;
   }
 
   form {
