Modification de la largeur de la section Apropos sur les petites éceans

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,7 @@ button:hover {
   .container__apropos__section {
     display: flex;
     flex-direction: column;
+    width: 90%;
   }
 
   .apropos__description {
